--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,11 @@ docarray = "^0.41.0"
 wikipedia = "^1.4.0"
 openapi-pydantic = "^0.5.1"
 ipykernel = "^6.29.5"
-pysqlite3 = "^0.5.4"
-pysqlite3-binary = "^0.5.4"
+# pysqlite3 = "^0.5.4"
+# pysqlite3-binary = "^0.5.4"
 openai-agents = "^0.0.16"
 graphviz = "^0.20.3"
+streamlit = "^1.52.1"
 
 
 [tool.poetry.group.dev.dependencies]
